--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -613,6 +613,7 @@
         }
 
         .hints-table {
+            padding-top: 1rem;
             background-color: #2d2d2d;
             border-radius: 8px;
             border: 1px solid #444;
