--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -234,6 +234,10 @@
             display: flex;
             gap: 0.8rem;
             align-items: center;
+            background-color: #3b3b3b;
+            border: 3px double #555;
+            border-radius: 999px;
+            padding: 0.4rem 0.8rem;
         }
 
         .checker-btn {
