--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -108,36 +108,74 @@
 
         .nickname_inputs {
             display: flex;
-            flex-direction: row;
-            align-items: stretch;
-            width: 50%;
+            justify-content: center;
+            margin: 0.5rem 0 1rem;
         }
 
-        .nickname_inputs div {
+        .nickname-bar {
             display: flex;
             align-items: center;
-            padding-left: 1rem;
-            margin-bottom: 1rem;
+            gap: 0.6rem;
+            background-color: #5f5f5f;
+            border: 3px double #4a4a4a;
+            border-radius: 999px;
+            padding: 0.5rem 1rem;
+            box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.1),
+                inset 0 -2px 4px rgba(0, 0, 0, 0.3);
         }
 
-        .nickname_inputs label {
-            color: white;
-            margin-right: 0.625rem;
-            font-size: 0.8rem;
-            width: 3rem;
-            text-align: left;
-            flex-shrink: 0;
-        }
-
-        .nickname_inputs input {
-            width: 5rem;
-            padding: 0.3125rem;
-            font-size: 0.8rem;
+        .nickname-input {
+            width: 7rem;
+            padding: 0.2rem 0.4rem;
+            font-size: 1rem;
             text-align: center;
-            border: 1px solid #444;
-            border-radius: 0.25rem;
-            background-color: #2d2d2d;
-            color: white;
+            border: none;
+            background: transparent;
+            color: #f2e866;
+            outline: none;
+        }
+
+        .nickname-input::placeholder {
+            color: #d6ce5a;
+        }
+
+        .nickname-input:focus {
+            text-shadow: 0 0 6px rgba(242, 232, 102, 0.4);
+        }
+
+        .nick-separator {
+            color: #f2e866;
+            font-size: 1.2rem;
+            font-weight: bold;
+            padding: 0 0.2rem;
+        }
+
+        .nick-checker {
+            width: 26px;
+            height: 26px;
+            border-radius: 50%;
+            border: 2px solid #222;
+            box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
+        }
+
+        .nick-checker.white {
+            background: radial-gradient(circle at 30% 30%, #ffffff, #d9d9d9 60%, #bfbfbf);
+        }
+
+        .nick-checker.black {
+            background: radial-gradient(circle at 30% 30%, #3a3a3a, #1e1e1e 60%, #0f0f0f);
+        }
+
+        .sr-only {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            white-space: nowrap;
+            border: 0;
         }
 
         .selectors-wrapper {
@@ -753,13 +791,14 @@
     <div class="container">
         <h1>Backgammon Board Editor</h1>
         <div class="nickname_inputs">
-            <div>
-                <label for="white-input">Белые:</label>
-                <input type="text" id="white-input" value="nick_1">
-            </div>
-            <div>
-                <label for="black-input">Черные:</label>
-                <input type="text" id="black-input" value="nick_2">
+            <div class="nickname-bar">
+                <span class="nick-checker white" aria-hidden="true"></span>
+                <label for="white-input" class="sr-only">Белые</label>
+                <input type="text" id="white-input" class="nickname-input" value="nick_1">
+                <span class="nick-separator">:</span>
+                <label for="black-input" class="sr-only">Черные</label>
+                <input type="text" id="black-input" class="nickname-input" value="nick_2">
+                <span class="nick-checker black" aria-hidden="true"></span>
             </div>
         </div>
         <div class="board-wrapper">
