--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -115,8 +115,8 @@
         .nickname-bar {
             display: flex;
             align-items: center;
-            gap: 0.3rem;
-            background-color: #5f5f5f;
+            gap: 0.1rem;
+            background-color: #3b3b3b;
             border: 3px double #4a4a4a;
             border-radius: 12px;
             padding: 0.5rem 1.6rem;
