--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -131,12 +131,12 @@
             text-align: center;
             border: none;
             background: transparent;
-            color: #f2e866;
+            color: white;
             outline: none;
         }
 
         .nickname-input::placeholder {
-            color: #d6ce5a;
+            color: white;
         }
 
         .nickname-input:focus {
@@ -144,7 +144,7 @@
         }
 
         .nick-separator {
-            color: #f2e866;
+            color: white;
             font-size: 1.2rem;
             font-weight: bold;
             padding: 0 0.1rem;
